# cmsim

./: .gitignore  CHANGELOG.md  CHANGELOG.md.license  Cargo.toml  README.md  makebin.sh  sample.S  sample.ld
.github/workflows/: build.yml  clippy.yml  format.yml  reuse.yml
src/: lib.rs  main.rs
tests/: makebin.sh  sample.S  sample.ld  sample.txt
