[package]
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
description = "An instruction set simulator for Arm Cortex-M code"
edition = "2021"
license = "GPL-3.0-or-later"
name = "cmsim"
readme = "README.md"
repository = "https://github.com/thejpster/cmsim.git"
version = "0.1.0"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
